replaced and moved logo, changed to Delaware Cancer Maps, set Blurb link text to here

--- a/src/styles_topstuff.scss
+++ b/src/styles_topstuff.scss
@@ -4,7 +4,7 @@
 
 #logo-img {
     img {
-        float: left;
+        // float: left; // commented out so image above text
         margin-right: 8px;
         height: 4.2em;
         width: auto;
