--- a/src/styles_constants.scss
+++ b/src/styles_constants.scss
@@ -12,5 +12,5 @@ $lightlightgrey: #ececec;
 $midorange: #f99e26;
 $yellow: #feecd4;
 
-$warnmessagebgcolor: $midorange;
-$warnmessagetextcolor: $nearblack;
+$warnmessagebgcolor: #f99e26;
+$warnmessagetextcolor: #000000;
