--- a/src/styles_filtersandaairbarchart.scss
+++ b/src/styles_filtersandaairbarchart.scss
@@ -11,7 +11,7 @@
 
         span[data-filter] {
             display: table;
-            background-color: $midpurple;
+            background-color: #6472B9;
             color: white;
             font-size: 16px;
             padding: 5px;
@@ -24,7 +24,7 @@
             }
 
             .summary-close {
-                background-color: $darkpurple;
+                background-color: #293985;
                 position: absolute;
                 right: 0;
                 top: 0;
@@ -59,7 +59,7 @@
         div {
             b {
                 font-weight: normal;
-                color: $midgrey;
+                color: #666666;
             }
             span {
             }
