--- a/src/styles_termsofuse.scss
+++ b/src/styles_termsofuse.scss
@@ -22,7 +22,7 @@
         margin: auto;
         padding: 1em;
 
-        border: 1px solid $darkpurple;
+        border: 1px solid #293985;
         border-radius: 5px;
     }
 }
