--- a/src/styles_tooltips.scss
+++ b/src/styles_tooltips.scss
@@ -16,8 +16,8 @@ span.tooltipstered {
 
 .tooltipster-box {
     border-radius: 0 !important;
-    border: 1px solid $darkpurple !important;
-    background: $darkpurple !important;
+    border: 1px solid #293985 !important;
+    background: #293985 !important;
     color: #fff !important;
     padding: 5px !important;
     font-size: 16px !important;
@@ -29,6 +29,6 @@ span.tooltipstered {
 }
 
 .tooltipster-arrow-border, .tooltipster-arrow-background {
-    border-right-color: $darkpurple !important;
+    border-right-color: #293985 !important;
 }
 
