--- a/src/styles_topstuff.scss
+++ b/src/styles_topstuff.scss
@@ -12,7 +12,7 @@
 }
 
 h1.site-title-1 {
-    color: $midorange;
+    color: #f99e26;
     font-weight: 600;
     text-transform: uppercase;
     margin-bottom: -4px;
