--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,17 @@
-@import './styles_constants';
-@import './styles_misc';
-@import './styles_buttons';
-@import './styles_usaaccordion';
-@import './styles_topstuff';
-@import './styles_filters';
-@import './styles_map';
-@import './styles_incidencereadouts';
-@import './styles_filtersandaairbarchart';
-@import './styles_demogreadouts';
-@import './styles_learn';
-@import './styles_termsofuse';
-@import './styles_tooltips';
-@import './styles_download';
-@import './styles_print';
-@import './styles_footer';
+@use './styles_constants' as *;
+@use './styles_misc' as *;
+@use './styles_buttons' as *;
+@use './styles_usaaccordion' as *;
+@use './styles_topstuff' as *;
+@use './styles_filters' as *;
+@use './styles_map' as *;
+@use './styles_incidencereadouts' as *;
+@use './styles_filtersandaairbarchart' as *;
+@use './styles_demogreadouts' as *;
+@use './styles_learn' as *;
+@use './styles_termsofuse' as *;
+@use './styles_tooltips' as *;
+@use './styles_download' as *;
+@use './styles_print' as *;
+@use './styles_footer' as *;
+
