--- a/src/styles_filters.scss
+++ b/src/styles_filters.scss
@@ -14,8 +14,8 @@ div.data-filters {
         width: 100%;
         border-radius: 5px;
         background-color: white;
-        color: $nearblack;
-        border: 1px solid $midgrey;
+        color: #000000;
+        border: 1px solid #666666;
         padding: 2px 5px;
     }
     input[type="text"] {
