--- a/src/styles_incidencereadouts.scss
+++ b/src/styles_incidencereadouts.scss
@@ -17,7 +17,7 @@
 
         tbody {
             td, th[scope] {  /* this table is weird: not striped, with white separation; tip: border-collapse applies to first+last too, throwing off pixel-perfect alignment to other stuff */
-                background-color: $lightpurple;
+                background-color: #e6eaff;
                 line-height: 20px;
                 font-size: 16px;
                 font-weight: 400;
@@ -29,7 +29,7 @@
             }
 
             span[data-statistic="lciuci"] {  /* exception: subtext in a cell, with special colors */
-                color: $midgrey;
+                color: #666666;
                 font-size: 16px;
             }
         }
@@ -48,14 +48,14 @@
 
         position: relative;
         span.fullrangeline {  /* 1px line through the middle, indicating the full range */
-            background-color: $midpurple;
+            background-color: #6472B9;
             position: absolute;
             top: 5px;
             width: 100%;
             height: 1px;
         }
         span.ucilcirangeline {  /* thicker line through the indicated range for this area */
-            background-color: $midpurple;
+            background-color: #6472B9;
             position: absolute;
             top: 3px;
             height: 5px;
@@ -63,7 +63,7 @@
             width: 100%;  /* overridden in code*/
         }
         span.aairpoint {
-            background-color: $midpurple;
+            background-color: #6472B9;
             position: absolute;
             height: 11px; width: 11px;  /* width means radius means calculating offset to put its center at the indicated left; see code */
             border-radius: 50%;
