--- a/src/styles_misc.scss
+++ b/src/styles_misc.scss
@@ -10,63 +10,63 @@
 body, html {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    color: $nearblack;
+    color: #000000;
     line-height: 24px;
 }
 
 h1 {
-    color: $darkpurple;
+    color: #293985;
     font-size: 32px;
     font-weight: bold;
 }
 
 h2 {
-    color: $midpurple;
+    color: #6472B9;
     font-size: 28px;
     font-weight: bold;
 }
 
 h2.title {  /* a special type of H2 that's smaller; used to be H3 but ARIA says no */
-    color: $midpurple;
+    color: #6472B9;
     font-size: 21px;
     font-weight: normal;
 }
 
 .title {
-    color: $midpurple;
+    color: #6472B9;
     font-size: 18px;
     font-weight: bold;
 }
 
 .subtitle {
-    color: $midpurple;
+    color: #6472B9;
     font-size: 16px;
     font-weight: bold;
 }
 
 .warnmessage {
-    background-color: $warnmessagebgcolor;
-    color: $warnmessagetextcolor;
+    background-color: #f99e26;
+    color: #000000;
 }
 
 hr {
-    border-top: 1px solid $lightgrey;
+    border-top: 1px solid #CCCCCC;
     margin: 0;
 }
 
 label { font-weight:normal; }
 
 a {
-    color: $nearblack;
+    color: #000000;
     &:hover, &:active {
-        color: $midorange;
+        color: #f99e26;
     }
     text-decoration: underline;
 }
 
 .lighten {
-    color: $lightgrey;
-    fill: $lightgrey;  /* for Highcharts which are SVG tspan elements */
+    color: #CCCCCC;
+    fill: #CCCCCC;  /* for Highcharts which are SVG tspan elements */
 }
 
 .small {
@@ -83,7 +83,7 @@ table {
         th {
             font-weight: normal;
             background-color: white;
-            color: $midgrey;
+            color: #666666;
             vertical-align: bottom;
             text-align: center;
         }
@@ -92,7 +92,7 @@ table {
     tbody {
         td, th[scope] {
             background-color: white;
-            color: $midgrey;
+            color: #666666;
             font-size: 16px;
         }
     }
@@ -100,7 +100,7 @@ table {
     &.table-striped {  /* override Bootstrap color */
         tbody {
             tr:nth-child(odd) td {
-                background-color: $lightpurple;
+                background-color: #e6eaff;
             }
         }
     }
