--- a/src/styles_map.scss
+++ b/src/styles_map.scss
@@ -6,5 +6,7 @@
     height: 600px;
     width: 100%;
     background-color: white;
+    // outline: solid 1px grey;
+    box-shadow: 0 0 0 1px grey; /* Simulates an outline */
 }
 
