--- a/src/styles_misc.scss
+++ b/src/styles_misc.scss
@@ -108,6 +108,7 @@ table {
 
 i.fa-info-circle {  /* these are used exclusively for tooltip triggers, so get a cursor effect */
     cursor: pointer;
+    color: grey;
 }
 
 
