--- a/src/index.scss
+++ b/src/index.scss
@@ -1,17 +1,18 @@
-@use './styles_constants' as *;
-@use './styles_misc' as *;
-@use './styles_buttons' as *;
-@use './styles_usaaccordion' as *;
-@use './styles_topstuff' as *;
-@use './styles_filters' as *;
-@use './styles_map' as *;
-@use './styles_incidencereadouts' as *;
-@use './styles_filtersandaairbarchart' as *;
-@use './styles_demogreadouts' as *;
-@use './styles_learn' as *;
-@use './styles_termsofuse' as *;
-@use './styles_tooltips' as *;
-@use './styles_download' as *;
-@use './styles_print' as *;
-@use './styles_footer' as *;
+@use './styles/styles_constants' as *;
+@use './styles/styles_misc' as *;
+@use './styles/styles_buttons' as *;
+@use './styles/styles_usaaccordion' as *;
+@use './styles/styles_topstuff' as *;
+@use './styles/styles_filters' as *;
+@use './styles/styles_map' as *;
+@use './styles/styles_incidencereadouts' as *;
+@use './styles/styles_filtersandaairbarchart' as *;
+@use './styles/styles_demogreadouts' as *;
+@use './styles/styles_learn' as *;
+@use './styles/styles_termsofuse' as *;
+@use './styles/styles_tooltips' as *;
+@use './styles/styles_download' as *;
+@use './styles/styles_print' as *;
+@use './styles/styles_footer' as *;
+
 
